--- a/angular.json
+++ b/angular.json
@@ -31,6 +31,9 @@
               "node_modules/@fortawesome/fontawesome-free/css/all.css",
               "src/styles.scss"
             ],
+            "stylePreprocessorOptions": {
+              "includePaths": ["src/app/shared/scss"]
+            },
             "scripts": []
           },
           "configurations": {
@@ -96,6 +99,7 @@
             "styles": [
               "src/styles.scss"
             ],
+            
             "scripts": []
           }
         },
